--- a/src/components/Project/MainSection/Head/styles.css
+++ b/src/components/Project/MainSection/Head/styles.css
@@ -1,7 +1,9 @@
 .main-section-head {
   display: flex;
-  justify-content: end;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
   width: 100%;
-  height: 200px;
+  height: 210px;
   background-color: seagreen;
 }
